<resources>
    <string name="app_name">ExDictionary</string>
    <string name="menu_add">Add...</string>
    <string name="text_word">Word</string>
    <string name="text_paraphrase">Paraphrase</string>
    <string name="text_example">Example</string>
    <string name="menu_search">Search...</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_add_title">New word</string>
    <string name="menu_del">Delete</string>
    <string name="menu_update">Update</string>
    <string name="text_translation">Translation</string>
    <string name="text_null">Unknown</string>
    <string name="text_search">Search</string>
    <string name="alert_del_confirm">Are you sure to delete?</string>
    <string name="text_network_error">Error: Operation failed due to network</string>
    <string name="menu_review">Review...</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="text_correct">Correct</string>
    <string name="text_total">Total</string>
    <string name="text_accuracy">Accuracy</string>
    <string name="menu_create_review">Create review</string>
    <string name="text_finish_test">Submit</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_show_result">Show Result</string>
    <string name="text_finish">Finish</string>
    <string name="title_result_dialog">Score report</string>
</resources>
